[package]
name = "guardian"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guardian"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
whitelist = []
mainnet = []
devnet = []
testnet = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive", "init-if-needed", "event-cpi"] }