[package]
name = "susdu"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "susdu"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
whitelist = []
mainnet = []
devnet = []
testnet = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive", "init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.30.1", features = ["token_2022_extensions"] }
spl-type-length-value = "0.4.3"
guardian = { path = "../guardian", features = ["cpi"] }
