[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
whitelist-mint = []
mainnet-mint = []
devnet-mint = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive", "init-if-needed"] }
anchor-spl = { version = "0.30.1" }
usdu = { path = "../usdu", features = ["cpi"] }
susdu = { path = "../susdu", features = ["cpi"] }
guardian = { path = "../guardian", features = ["cpi"] }
bytemuck = { version = "1.21.0", features = ["derive", "min_const_generics"] }
uint = { version = "0.9.5", default-features = false }
solana-program = "1.18.3"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0.56"
